...
                                        Button(role: .destructive) {
                                            todoViewModel.deselectForToday(todo)
                                        } label: {
                                            Label(Localization.labels.remove, systemImage: "minus.square")
                                        }
                                        .tint(Color.theme.graybrown)
                                        .accessibilityIdentifier("RemoveFromTodaysTodos")
                                        
                                        Button(role: .destructive) {
                                            todoViewModel.deleteTodo(todo)
                                        } label: {
                                            Label(Localization.labels.delete, systemImage: "trash")
                                        }
                                        .tint(Color.theme.red)
                                        .accessibilityIdentifier("TodaysTodosDeleteTodo")
                                        
                                    }
                                    .swipeActions(edge: .leading, allowsFullSwipe: true) {
                                        
                                        Button {
                                            todoViewModel.setToDone(todayTodo)
                                            DeviceFeedback.vibrateTwice()
                                        } label: {
                                            Label(Localization.labels.done, systemImage: "checkmark.square")
                                        }
                                        .tint(Color.theme.green)
                                        .accessibilityIdentifier("MarkAsDoneButton")
                                        
                                        Button {
                                            selectedTodo = todo
                                        } label: {
                                            Label(Localization.labels.edit, systemImage: "pencil")
                                        }
...
                                showingAddTodo = true
                            }
                        }) {
                            Image(systemName: "plus.circle")
                                .foregroundColor(Color.theme.primary)
                        }
                        .accessibilityIdentifier("AddTodayTodoButton")
                    }
                }
            }
            .sheet(item: $sharedTodos) { wrapper in
                let todos : [Todo] = wrapper.todos
                let dateString = StyleUtils.dateTimeFormatter.string(from: Date())
...
