...
                            .padding()
                            .accessibilityIdentifier("Title")
                        
                        Text(explanationText)
                            .font(Font.app.small)
                            .padding()
                            .accessibilityIdentifier("Explanation")
                        
                    }
                    .sectionSytle()
                    
                    if let buttonText = buttonText, let buttonAction = buttonAction {
                        Button {
...
                    Button(action: {
                        presentationMode.wrappedValue.dismiss()
                    }) {
                        Text(Localization.labels.back)
                            .font(Font.app.button)
                    }
                    .accessibilityIdentifier("backButton")
                }
            }
            .navigationBarTitleDisplayMode(.inline)
        }
    }
}
...
