...
                            Button(action: {
                                self.showingInfo.toggle()
                            }) {
                                Image(systemName: "info.circle")
                                    .font(Font.app.tiny)
                            }
                            .accessibilityIdentifier("infoButton")
                            .sheet(isPresented: $showingInfo) {
                                InfoView(
                                    isPresented: $showingInfo,
                                    title: Localization.info.infoTimebudgetTitle,
                                    explanationText: Localization.info.infoTimebudgetText,
                                    buttonText: nil,
...
                        .font(Font.app.tiny)
                        .padding(.horizontal,64)
                        
                        Slider(value: $energyLevel, in: 1...3, step: 1)
                            .padding(.horizontal,64)
                            .accentColor(Color.theme.accent)
                            .accessibilityIdentifier("timeBudgetSlider")
                    }
                }
                .padding(.bottom, 14)
                .id(viewID)
            }
        }
...
